src/app/snapshots/stockterm__app__ui__snapshot_tests__error_log_overlay_empty.snap
---
source: src/app/ui.rs
expression: buffer_snapshot_string(&buf)
---
                                                                                
                                                                                
                                                                                
                                                                                
         ·Recent errors················································         
         ·                                                            ·         
         ·                                                            ·         
         ·                                                            ·         
         ·                                                            ·         
         ·                                                            ·         
         ·                                                            ·         
         ·                                                            ·         
         ·                                                            ·         
         ·                                                            ·         
         ·                                                            ·         
         ·                                                            ·         
         ·                                                            ·         
         ·Esc close · j/· k/· scroll · PgUp/PgDn                      ·         
         ·                                                            ·         
         ······························································
