src/app/snapshots/stockterm__app__ui__snapshot_tests__error_log_overlay_three_entries.snap
---
source: src/app/ui.rs
expression: buffer_snapshot_string(&buf)
---
                                                                                
                                                                                
                                                                                
                                                                                
         ·Recent errors················································         
         ·12:00:01  Stock [net] Connection timed out                  ·         
         ·12:00:02   Port [api] Quote unavailable for XYZ             ·         
         ·12:00:03 Charts [rate] Rate limited · retry later           ·         
         ·                                                            ·         
         ·                                                            ·         
         ·                                                            ·         
         ·                                                            ·         
         ·                                                            ·         
         ·                                                            ·         
         ·                                                            ·         
         ·                                                            ·         
         ·                                                            ·         
         ·Esc close · j/· k/· scroll · PgUp/PgDn                      ·         
         ·                                                            ·         
         ······························································
