src/app/snapshots/stockterm__app__ui__snapshot_tests__status_bar_stock_view_narrow_two_lines.snap
---
source: src/app/ui.rs
expression: buffer_snapshot_string(&buf)
---
q quit · Tab tabs · A·Z,-. type · w add · x/D rm · j/k · Enter · ^E error log · 
Symbols starting w/x/j/k: type 1st letter with Shift (e.g. Wmt · WMT)
